fixed layout bugs with clearfix
- also improved gallery styling

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -7,10 +7,11 @@
   margin: 0;
   display: block;
   float: left;
-  width: 33%;
+  width: calc(33% - 10px);
   border: 0px transparent solid;
   line-height: 0;
   padding: 0;
+  margin: 5px;
 }
 
 #lightgallery a img {
@@ -18,7 +19,7 @@
   width: 100%;
   display: block;
   padding: 0;
-  height: 180px;
+  height: 250px;
   object-fit: cover;
   vertical-align: top;
 }
